--- a/index.html
+++ b/index.html
@@ -23,9 +23,19 @@
     background-repeat: no-repeat;
     background-size: 100vw 100vh;
     background-position: center;
-
+    opacity: 0;
+    transform: translateY(20px);
+    animation: fadeIn 0.5s forwards;
 }
-
+.navbanner-container:is(:hover, :focus, :active) {
+    animation-play-state: running;
+}
+@keyframes fadeIn {
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
 /* .............navbar...................... */
 
 .navbar-container{
@@ -46,6 +56,9 @@
 .navlogo-section img{
     width: 200px;
     height: 100px;
+}
+.menu-logo{
+    display: none;
 }
 .navmenu-section{
     width: 55%;
@@ -82,6 +95,7 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
+
 .about-heading{
     width: 50%;
     height: 100%;
@@ -145,7 +159,7 @@
 }
 .product-title{
     width: 100%;
-    height: 10%;
+    height: 100px;
     display: flex;
     padding-left: 15%;
     align-items: center;
@@ -491,15 +505,19 @@
 .footer-container{
     width: 100%;
     height: 50vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: rgb(18,18,18);
 }
 .footer-content{
-    width: 100%;
+    width: 90%;
     height: 80%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     /* background-color: rgb(18,18,18); */
+    border-bottom: 1px solid white;
 }
 .footer-content img{
     margin-left: 5%;
@@ -527,9 +545,305 @@
     align-items: center;
     justify-content: center;
     /* background-color: aqua;   */
-    border-top: 1px solid white;
 }
+
+
+
+/* ...................................................................................................................... */
+
+
+@media (max-width:1025px){
+
+/* .......about..................*/
+.about-heading {
+    padding-left: 10%;
+}
+.about-content p{
+    font-size: 13px;
+}
+
+/* .........service................ */
+.service-card{
+    width: 300px;
+    height: 80%;
+}
+.service-card p{
+    font-size: 12px;
+}
+}
+
+@media (max-width:769px){
+
+/* ...........nav........................ */
+.menu-logo{
+    display: block;
+    padding: 5%;
+}
+.navmenu-section{
+    display: none;
+}
+
+/* .............about........................ */
+.aboutpage-container{
+    display: flex;
+    flex-direction: column;
+    background-position: center;
+}
+.about-heading{
+    width: 100%;
+    height: 30%;
+    /* background-color: azure; */
+    align-items: flex-start;
+    padding-left: 10%;
+    padding-top: 5%;
+}
+.about-content{
+    width: 100%;
+}
+.about-content p{
+    font-size: 18px;
+}
+.about-content button{
+    width: 30%;
+}
+
+/* ............service........................ */
+
+.servicepage-container{
+    height: 240vh;
+}
+.service-card-container{
+    grid-template-columns: repeat(1,3fr);
+    flex-direction: column;
+    gap: 2%;
+}
+.service-card{
+    width: 400px;
+    height: 40%;
+    padding-left: 5%;
+}
+.service-card p{
+    font-size: 16px;
+}
+.service-card button{
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+}
+
+@media (max-width:426px){
+/* ..............nav....................... */
+.navlogo-section img{
+    width: 100px;
+    height: 80px;
+}
+.menu-logo{
+    padding: 10%;
+}
+/* .............about...................... */
+.about-content p{
+    font-size: 12px;
+    line-height: auto;
+}
+.about-content button{
+    width: 150px;
+    height: 50px;
+}
+/* ................product.............. */
+.productpage-container{
+    height: 590vh;
+}
+.product-container{
+    display: flex;
+    flex-direction: column;
+}
+.section {
+    width: 90%;
+}
+/* .............project.................. */
+.project-page1{
+    height:200vh ;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.project-1{
+    width: 80%;
+    height: 40%;
+    margin-left: 5%;
+}
+.project-2{
+    width: 80%;
+    height: 40%;
+    margin-right: 5%;
+}
+.project-page2{
+    height:200vh ;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.project-3{
+    width: 80%;
+    height: 40%;
+    margin-left: 5%;
+}
+.project-4{
+    width: 80%;
+    height: 40%;
+    margin-right: 5%;
+}
+
+/* ............service..................... */
+
+.service-card{
+    width: 350px;
+    height: 40%;
+}
+.service-card p{
+    font-size:15px;
+}
+/* .............banner-2................ */
+.banner2-container h2{
+    font-size: 34px;
+}
+.banner2-container p{
+    font-size: 26px;
+    font-family: cursive;
+}
+/* ..............why..................... */
+.stats-container{
+    width: 100%;
+}
+.stat-box {
+    background-position: center;
+}
+.stat-box img{
+    width: 50px;
+}
+.stat-box p {
+    font-size: 32px;
+}
+.stat-box h3 {
+    font-size: 18px;
+}
+/* ..............footer.................. */
+.footer-content img{
+    width: 120px;
+}
+.footer-contact{
+   display: flex;
+   justify-content: space-evenly;
+   flex-direction: column;
+}
+.footer-contact img{
+    width: 30px;
+}
+.footer-bottom{
+    font-size: 16px;
+}
+}
+
+
+
+@media (max-width:376px){
+/* ..............nav....................... */
+.navlogo-section img{
+    width: 80px;
+    height: 60px;
+}
+.menu-logo{
+    padding: 12%;
+}
+/* .............about...................... */
+.about-heading span{
+    font-size: 22px;
+}
+.about-heading h3{
+    font-size: 26px;
+}
+.about-content p{
+    font-size: 10px;
+    line-height: auto;
+}
+.about-content button{
+    width: 150px;
+    height: 50px;
+    font-size: 12px;
+}
+/* ................product.............. */
+.product-title{
+    font-size: 22px;
+}
+/* ............service..................... */
+
+.service-card{
+    width: 320px;
+    height: 40%;
+}
+.service-card p{
+    font-size:13px;
+}
+/* ..............why..................... */
+.stat-box h3 {
+    font-size: 16px;
+}
+/* ..............footer.................. */
+.footer-bottom{
+    font-size: 12px;
+}
+}
+
+
+
+@media (max-width:321px){
+/* ..............nav....................... */
+.navlogo-section img{
+    width: 60px;
+    height: 50px;
+}
+.menu-logo{
+    padding: 15%;
+    margin-left: 2%;
+}
+/* .............about...................... */
+
+.about-content p{
+    font-size: 9px;
+    line-height: auto;
+
+}
+/* ............service..................... */
+
+.service-card{
+    width: 300px;
+    height: 40%;
+}
+.service-card p{
+    font-size:13px;
+}
+/* .............banner-2................ */
+.banner2-container h2{
+    font-size: 28px;
+}
+.banner2-container p{
+    font-size: 25px;
+    font-family: cursive;
+}
+/* ..............why..................... */
+.stat-box h3 {
+    font-size: 13px;
+}
+}
+
+
+
+
+
+
+
 </style>
+
 </head>
 <body>
 <div class="web-container">
@@ -540,6 +854,7 @@
           <div class="navlogo-section">
              <img src="luxoria-images/logo5.png" alt="">
           </div>
+          <img class="menu-logo" src="luxoria-images/icons8-menu-80.png" alt="">
           <div class="navmenu-section">
             <p>About</p>
             <p>Products</p>
@@ -547,7 +862,7 @@
             <p>Contact</p>
           </div>
         </div>
-<!-- ........banner.................................... -->
+<!-- ........banner................................... -->
         <div class="banner-container">
 
         </div>
@@ -763,6 +1078,8 @@ container.addEventListener('mouseenter', () => {
     });
   }
 });
+
+
 </script>
 </body>
 </html>
